@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2003/02/15 05:56:58 salo Exp $
+$NetBSD: distinfo,v 1.3 2003/06/29 02:04:20 jlam Exp $
 
-SHA1 (centericq-4.9.2.tar.gz) = bfa97d4dd6a3e5c755f032764fa8766bb42406ae
-Size (centericq-4.9.2.tar.gz) = 1223514 bytes
+SHA1 (centericq-4.9.4.tar.bz2) = 91566da9904eb5b85074ed6b08f047ccc97bccda
+Size (centericq-4.9.4.tar.bz2) = 896855 bytes
